<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/banner"
            android:padding="0dp">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Support"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:textSize="25dp"
                android:textColor="#FFFFFF"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/fragment_main_btn_knowledge_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fragment_main_btn_knowledge_base"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"/>

                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="#00FFFF"></View>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/fragment_main_btn_chat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:text="@string/fragment_main_btn_chat" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="#000000"></View>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/fragment_main_btn_contact_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:text="@string/fragment_main_btn_contact_us" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="#FF0000"></View>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/fragment_main_btn_my_tickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:text="@string/fragment_main_btn_my_tickets" />
                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="#FFFF00"></View>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/fragment_main_btn_rateapp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:text="@string/fragment_main_btn_rate_the_app" />
                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="#00FFFF"></View>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/fragment_main_btn_givefeedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:background="@android:color/transparent"
                        android:text="@string/fragment_main_btn_give_feedback">
                    </Button>
                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="#FF00FF"></View>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
